2009-03-06 [wwp]	3.7.1cvs2

	* src/compose.c
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/prefs_folder_item.c
		Add per-folder default cc, bcc and reply-to.

2009-03-06 [colin]	3.7.1cvs1

	* src/gedit-print.c
	* src/gtk/gtksourceprintjob.c
		Fix build with old print interface

2009-03-06 [paul]	3.7.1

	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.1 released!

2009-03-06 [paul]	3.7.0cvs78

	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/nl.po
	* po/pt_BR.po
	* po/sv.po
	* po/zh_CN.po
		updated by David Vachulka, Stephan Sachse, Flammie
		Pirinen, Colin Leroy, Pader Rezso, Marcel Pol,
		Frederico Goncalves Guimaraes, Lars Persson Fink,
		and Ralph Young

2009-03-03 [colin]	3.7.0cvs77

	* src/prefs_filtering.c
		Win32: Fix bug 1865, 'IMAP account name changes 
		are not followed at filter actions'

2009-03-02 [colin]	3.7.0cvs76

	* src/imap.c
		Fix Launchpad bug 335571: 'claws-mail crashed 
		with SIGSEGV in strlen() while deleting 
		large amount of e-mails on IMAP account

2009-02-27 [mones]	3.7.0cvs75

	* manual/es/account.xml
	* manual/es/ack.xml
	* manual/es/addrbook.xml
	* manual/es/advanced.xml
	* manual/es/claws-mail-manual.xml
	* manual/es/faq.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/handling.xml
	* manual/es/intro.xml
	* manual/es/keyboard.xml
	* manual/es/plugins.xml
	* manual/es/starting.xml
		Sync with English version, fix some typos
		Changed encoding to UTF-8
	* po/es.po
		Update for release, changed encoding to UTF-8

2009-02-24 [colin]	3.7.0cvs74

	* src/printing.c
		Don't print separation line if there
		are no headers

2009-02-23 [cleroy]	3.7.0cvs73

	* src/account.c
	* src/action.c
	* src/addr_compl.c
	* src/addrbook.c
	* src/addrcache.c
	* src/addrcindex.c
	* src/addrclip.c
	* src/addrduplicates.c
	* src/addressadd.c
	* src/addressbook.c
	* src/addressbook_foldersel.c
	* src/addrharvest.c
	* src/addrindex.c
	* src/addritem.c
	* src/addrquery.c
	* src/addrselect.c
	* src/codeconv.c