@@ -3742,3 +3742,4 @@
 ( cvs diff -u -r 1.9.2.14 -r 1.9.2.15 po/cs.po;  cvs diff -u -r 1.58.2.42 -r 1.58.2.43 po/de.po;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 po/fi.po;  cvs diff -u -r 1.42.2.45 -r 1.42.2.46 po/fr.po;  cvs diff -u -r 1.5.2.12 -r 1.5.2.13 po/hu.po;  cvs diff -u -r 1.28.2.12 -r 1.28.2.13 po/nl.po;  cvs diff -u -r 1.50.2.34 -r 1.50.2.35 po/pt_BR.po;  cvs diff -u -r 1.4.2.10 -r 1.4.2.11 po/sv.po;  cvs diff -u -r 1.5.2.28 -r 1.5.2.29 po/zh_CN.po;  ) > 3.7.0cvs78.patchset
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/gedit-print.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/gtk/gtksourceprintjob.c;  ) > 3.7.1cvs1.patchset
 ( cvs diff -u -r 1.487 -r 1.488 src/compose.c;  cvs diff -u -r 1.10 -r 1.11 src/folder_item_prefs.c;  cvs diff -u -r 1.6 -r 1.7 src/folder_item_prefs.h;  cvs diff -u -r 1.65 -r 1.66 src/prefs_folder_item.c;  ) > 3.7.1cvs2.patchset
+( cvs diff -u -r 1.94.2.200 -r 1.94.2.201 src/messageview.c;  cvs diff -u -r 1.49.2.127 -r 1.49.2.128 src/procmime.c;  cvs diff -u -r 1.17.2.23 -r 1.17.2.24 src/procmime.h;  ) > 3.7.1cvs3.patchset
